 - Wii: Fix garbage flash at startup
 - VFS: Fix uninitialized varaible reading from 7z
 - GBA: Fix losing IRQs when CPSR I bit isn't cleared
 - VFS: Fix reading multiple files from a 7z archive
 - GBA: Fix filehandle leak with savegames
 - GBA: Timer 0 cannot be count up
 - Qt: Fix being unable to pause manually when using auto-pausing
 - GBA Memory: Fix ldm {pc}
Misc:
 - 3DS: Use blip_add_delta_fast for a small speed improvement
 - OpenGL: Log shader compilation failure
 - Qt: Remove some C99isms from C++ code
 - Windows: Add native VDir support
 - All: Add QUIET parameter to silence CMake
 - ARM7: Support forcing Thumb mode via MSR
 - ARM7: Flush prefetch cache when loading CPSR via MSR
 - OpenGL: Add texSize uniform
 - ARM7: Clean up instruction decoding for future expandability
 - Qt: Make -g flag work in Qt build
 - Qt: Simplify OpenGL context creation
 - Debugger: Support register and memory writes via GDB stub
 - GBA Audio: Force audio DMAs to not increment destination
 - Qt: Thread startup improvements
 - 3DS: Allow UTF-16 filenames
 - 3DS: Port to using citro3D
 - 3DS: Use system font for menus
 - PSP2: Use system font for menus
 - All: Faster memory read/write
 - Qt: Make audio channel/video layer options shortcut mappable
 - GBA Memory: Optimize stalling behavior
 - 3DS: Attempt to use Core 2 for threads
 - GUI: Screenshot dimensions are now passed through
 - GUI: Add back logging
 - PSP2: Add rumble for PS TV
 - PSP2: Add fit-to-height screen mode
 - GBA Video: Remove old slow path fallback
 - GBA Video: Optimize sprite drawing
 - GBA BIOS: Use custom ArcTan, not relying on OS
 - PSP2: Sync files per descriptor
 - GBA Savedata: Add realistic timing for EEPROM
 - GBA Video: Optimize mode 0 rendering
 - Qt: Remove default autofire mappings
 - PSP2: Allow UTF-8 filenames
 - Util: Add Vector GetConstPointer
 - Util: Add rtrim
 - GBA Memory: Optimize Load-/StoreMultiple
 - 3DS: Adjustable filering
 - PSP2: Screenshots are now saved into the Photo Gallery