@@ -39,6 +39,7 @@ Bugfixes:
  - GBA: Timer 0 cannot be count up
  - Qt: Fix being unable to pause manually when using auto-pausing
  - GBA Memory: Fix ldm {pc}
+ - GBA Video: Fix out-of-order OBJWIN
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
